tests/neg-custom-args/captures/implied-capability.check
-- Error: tests/neg-custom-args/captures/implied-capability.scala:4:6 --------------------------------------------------
4 |  var x: Int = 0 // error
  |      ^
  |      Mutable variable x is defined in a class that does not extend `Stateful` or `Mutable`.
  |      The variable needs to be annotated with `untrackedCaptures` to allow this.
-- Error: tests/neg-custom-args/captures/implied-capability.scala:9:6 --------------------------------------------------
9 |  val r: Ref = Ref() // error
  |      ^
  |      value r's type Ref^{any.rd} is classified as scala.caps.Unscoped,
  |      but it is a field of class C2 which is classied as scala.caps.SharedCapability.
  |      Field classifiers have to conform to the classifier of the containing class.
  |
  |      where:    any is a root capability classified as Unscoped in the type of value r
